--- a/paper/src/bibliography.bib
+++ b/paper/src/bibliography.bib
@@ -690,6 +690,14 @@
   author =	 {OpenAIRE Project},
   year =	 2017
 }
+http://www.cs.huji.ac.il/labs/parallel/workload/\ logs.html#clean
+
+@misc{pwa-clean,
+  title = {{Parallel Workloads Archive: Cleaning Logs.}},
+  howpublished = {\url{http://www.cs.huji.ac.il/labs/parallel/workload/logs.html#clean}, accessed 03/23/17},
+  author =	 {Dror Feitelson},
+  year =	 2017
+}
 
 @inproceedings{mlmem,
   author = {Rodrigues, Eduardo R. and Cunha, Renato L. F. and Netto, Marco A. S. and Spriggs, Michael},
