--- a/paper/src/bibliography.bib
+++ b/paper/src/bibliography.bib
@@ -309,7 +309,7 @@
 
 @InProceedings{flurries,
   author    = {D. Tsafrir and D. G. Feitelson},
-  title     = {Instability in parallel job scheduling simulation: the role of workload flurries},
+  title     = {Instability in parallel job scheduling simulation: The role of workload flurries},
   booktitle = {Proceedings 20th IEEE International Parallel Distributed Processing Symposium},
   year      = {2006},
   pages     = {10 pp.-},
@@ -632,20 +632,6 @@
   address = {New York, NY, USA},
 }
 
-@Inbook{jsm,
-  author="Feitelson, Dror G.",
-  editor="Feitelson, Dror G.
-    and Rudolph, Larry",
-  title="Metrics for Parallel Job Scheduling and Their Convergence",
-  bookTitle="Job Scheduling Strategies for Parallel Processing: 7th International Workshop, JSSPP 2001 Cambridge, MA, USA, June 16, 2001 Revised Papers",
-  year="2001",
-  publisher="Springer Berlin Heidelberg",
-  address="Berlin, Heidelberg",
-  pages="188--205",
-  isbn="978-3-540-45540-0",
-  doi="10.1007/3-540-45540-X_11",
-  url="http://dx.doi.org/10.1007/3-540-45540-X_11"
-}
 
 
 @Inbook{feitperfeval,
@@ -680,7 +666,7 @@
 @Misc{isc,
   title = {{ISC} license},
   howpublished = {\url{https://opensource.org/licenses/ISC}, accessed 03/23/17},
-  author =	 {Internet Systems Consortium},
+  organization = {Internet Systems Consortium},
   year =	 2017,
 }
 
@@ -717,12 +703,6 @@ http://www.cs.huji.ac.il/labs/parallel/workload/\ logs.html#clean
 }
 
 @phdthesis{nix,
-  abstract = {{Software deployment is the set of activities related to getting software components to work on the machines of end users. It includes activities such as installation, upgrading, uninstallation, and so on. Many tools have been developed to support deployment, but they all have serious limitations with respect to correctness. For instance, the installation of a component can lead to the failure of previously installed components; a component might require other components that are not present; and it is generally difficult to undo deployment actions. The fundamental causes of these problems are a lack of isolation between components, the difficulty in identifying the dependencies between components, and incompatibilities between versions and variants of components.
-    This thesis describes a better approach based on a purely functional deployment model, implemented in a deployment system called Nix. Components are stored in isolation from each other in a Nix store. Each component has a name that contains a cryptographic hash of all inputs that contributed to its build process, and the content of a component never changes after it has been built. Hence the model is purely functional.
-      This storage scheme provides several important advantages. First, it ensures isolation between components: if two components differ in any way, they will be stored in different locations and will not overwrite each other. Second, it allows us to identify component dependencies. Undeclared build time dependencies are prevented due to the absence of  ” global” component directories used in other deployment systems. Runtime dependencies can be found by scanning for cryptographic hashes in the binary contents of components, a technique analogous to conservative garbage collection in programming language implementation. Since dependency information is complete, complete deployment can be performed by copying closures of components under the dependency relation.
-      Developers and users are not confronted with components' cryptographic hashes directly. Components are built automatically from Nix expressions, which describe how to build and compose arbitrary software components; hashes are computed as part of this process. Components are automatically made available to users through  ” user environments”, which are synthesised sets of activated components. User environments enable atomic upgrades and rollbacks, as well as different sets of activated components for different users.
-      Nix expressions provide a source-based deployment model. However, source-based deployment can be transparently optimised into binary deployment by making pre-built binaries (keyed on their cryptographic hashes) available in a shared location such as a network server. This is referred to as transparent source/binary deployment.
-      The purely functional deployment model has been validated by applying it to the deployment of more than 278 existing Unix packages. In addition, this thesis shows that the model can be applied naturally to the related activities of continuous integration using build farms, service deployment and build management.}},
   author = {Dolstra, Eelco},
   citeulike-article-id = {1402778},
   citeulike-linkout-0 = {http://www.cs.uu.nl/\~{}eelco/pubs/phd-thesis.pdf},
