changes to the beginning of the paper

--- a/paper/src/bibliography.bib
+++ b/paper/src/bibliography.bib
@@ -787,18 +787,67 @@ http://www.cs.huji.ac.il/labs/parallel/workload/\ logs.html#clean
 }
 
 @book{ocst,
-  author = {Anonymous},
-  title = {(omitted due to double-blind review: software)}
+  author = {Valentin Reis},
+  title = {The Ocaml Easy-Backfilling Simulator},
+  url = {http://github.com/freuk/ocst}
 }
 
-@book{jsspp17,
-  author = {Anonymous},
-  title = {(omitted due to double-blind review: unpublished work)}
+@inproceedings{jsspp17,
+  TITLE = {{Tuning EASY-Backfilling Queues}},
+  AUTHOR = {Jerome Lelong and Valentin Reis and Denis Trystram},
+  URL = {https://hal.archives-ouvertes.fr/hal-01522459},
+  BOOKTITLE = {{21st Workshop on Job Scheduling Strategies for Parallel Processing}},
+  ADDRESS = {Orlando, United States},
+  SERIES = {31st IEEE International Parallel \& Distributed Processing Symposium },
+  YEAR = {2017},
+  MONTH = May,
+  PDF = {https://hal.archives-ouvertes.fr/hal-01522459/file/paper.pdf},
+  HAL_ID = {hal-01522459},
+  HAL_VERSION = {v1},
+}
+
+@article{feitelson1999self,
+  title={Self-tuning systems},
+  author={Feitelson, Dror G and Naaman, Michael},
+  journal={IEEE software},
+  volume={16},
+  number={2},
+  pages={52--60},
+  year={1999},
+  publisher={IEEE}
 }
 
 @book{repro,
-  author = {Anonymous},
-  title = {(omitted due to double-blind review: software)}
+  author = {Valentin Reis},
+  title = {Replication workflow}
+  url = {http://github.com/obps/obps}
+}
+
+@inproceedings{srinivasan2002selective,
+  title={Selective reservation strategies for backfill job scheduling},
+  author={Srinivasan, Srividya and Kettimuthu, Rajkumar and Subramani, Vijay and Sadayappan, Ponnuswamy},
+  booktitle={Job Scheduling Strategies for Parallel Processing},
+  pages={55--71},
+  year={2002},
+  organization={Springer}
+}
+
+@inproceedings{talby2005improving,
+  title={Improving and stabilizing parallel computer performance using adaptive backfilling},
+  author={Talby, David and Feitelson, Dror G},
+  booktitle={Parallel and Distributed Processing Symposium, 2005. Proceedings. 19th IEEE International},
+  pages={10--pp},
+  year={2005},
+  organization={IEEE}
+}
+
+@inproceedings{deng2013exploring,
+  title={Exploring portfolio scheduling for long-term execution of scientific workloads in IaaS clouds},
+  author={Deng, Kefeng and Song, Junqiang and Ren, Kaijun and Iosup, Alexandru},
+  booktitle={Proceedings of the International Conference on High Performance Computing, Networking, Storage and Analysis},
+  pages={55},
+  year={2013},
+  organization={ACM}
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
