figures change, obandit ref fix

--- a/paper/src/bibliography.bib
+++ b/paper/src/bibliography.bib
@@ -799,7 +799,7 @@ http://www.cs.huji.ac.il/labs/parallel/workload/\ logs.html#clean
 
 @book{repro,
   author = {Valentin Reis},
-  title = {Replication workflow}
+  title = {Replication workflow},
   url = {http://github.com/obps/obps}
 }
 
