--- a/paper/src/paper.tex
+++ b/paper/src/paper.tex
@@ -239,7 +239,10 @@ compare algorithms after the workload is known.
 The dynP scheduler~\cite{streit_selftuning_2002} suggests a systematic method
 to tuning these queues. Although it requires simulated scheduling runs at
 decision time and therefore, making it much more than the natural execution of
-EASY.
+EASY. The adaptation of EASY was studied under a different framework than ours
+in~\cite{talby2005improving}. Other works study the reservation
+mechanism~\cite{srinivasan2002selective}. Online portfolio approaches are also
+studied for the cloud setting~\cite{deng2013exploring}.
 
 \subsection{Data-aware Resource Management.}
 
