--- a/paper/src/bibliography.bib
+++ b/paper/src/bibliography.bib
@@ -830,4 +830,17 @@ http://www.cs.huji.ac.il/labs/parallel/workload/\ logs.html#clean
   organization={ACM}
 }
 
+@inproceedings{dutot:hal-01333471,
+  TITLE = {{Batsim: a Realistic Language-Independent Resources and Jobs Management Systems Simulator}},
+  AUTHOR = {Dutot, Pierre-Fran{\c c}ois and Mercier, Michael and Poquet, Millian and Richard, Olivier},
+  URL = {https://hal.archives-ouvertes.fr/hal-01333471},
+  BOOKTITLE = {{20th Workshop on Job Scheduling Strategies for Parallel Processing}},
+  ADDRESS = {Chicago, United States},
+  YEAR = {2016},
+  MONTH = May,
+  KEYWORDS = {Reproducibility ; RJMS ; Scheduling ; Simulation},
+  PDF = {https://hal.archives-ouvertes.fr/hal-01333471/file/batsim.pdf},
+  HAL_ID = {hal-01333471},
+  HAL_VERSION = {v1},
+}
 @Comment{jabref-meta: databaseType:bibtex;}
