--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -153,7 +153,7 @@ last few years, there was an explosion in the number of works at the interface
 of the HPC and Big Data fields, dealing with learning algorithms. Recent
 sophisticated approaches developed \textit{ad hoc} supervised machine learning
 algorithms for reducing uncertainty in problem parameters (e.g.,\ job execution
-times\cite{learningruntimes}, memory requirements, etc.). However, only few studies
+times ~\cite{learningruntimes}, memory requirements, etc.). However, only few studies
 evaluate the impact of such techniques on the performances of the resource
 manager.
 
@@ -183,7 +183,7 @@ multi-armed bandit algorithm, which derives feedback by measuring system
 performance.
 
 Both of these methods are evaluated with a specifically developed simulator,
-which is open-sourced\cite{ocst}.
+which is open-sourced ~\cite{ocst}.
 
 Our main results are as follows: The approach based on the simulator provides
 very good results, close to the best policy in the search set. In essence, we
@@ -211,60 +211,60 @@ This section presents and discusses the most significant results related to job
 scheduling and learning algorithms in this context. Let us start by recalling
 some basics results on heuristics in HPC platforms:
 
-Parallel job scheduling is a old studied theoretical
-problem~\cite{Frachtenberg:2009:JSS:1692356,Feitelson:2004:PJS:2128864.2128865}
+Parallel job scheduling is an old studied theoretical
+problem (~\cite{Frachtenberg:2009:JSS:1692356,Feitelson:2004:PJS:2128864.2128865})
 whose practical ramifications, varying hypotheses, and inherent uncertainty of
 the problem applied to the HPC field have driven practitioners to use simple
 heuristics (and researchers to study their behavior). The two most popular
-heuristics for HPC platforms are EASY~\cite{easy} and
-Conservative~\cite{Mu'alem:2001:UPW:380314.380315} backfilling.
+heuristics for HPC platforms are EASY ~\cite{easy} and
+Conservative ~\cite{Mu'alem:2001:UPW:380314.380315} backfilling.
 
-While Conservative Backfilling offers many advantages~\cite{bfchar}, it has a
+While Conservative Backfilling offers many advantages ~\cite{bfchar}, it has a
 significant computational overhead and is more complex, which mainly explains
-why many of the machines of the top500 ranking~\cite{top500} rather use a
+why many of the machines of the top500 ranking ~\cite{top500} rather use a
 variant of EASY-Backfilling instead. There is a large body of work seeking to
 improve/tune EASY. Indeed, while the basic mechanism is used by some actual
-resource and job management software (most notably SLURM~\cite{SLURMdocSCHED}),
+resource and job management software (most notably SLURM ~\cite{SLURMdocSCHED}),
 this is seldom done without fine tuning by system administrators.
 
 The original EASY mechanism refers to a First-Come-First-Serve basis.  Several
-works explore how to tune EASY by reordering waiting and/or backfilling
-queues~\cite{Tsafrir_easypp_2005}, sometimes even in a randomized
-manner~\cite{1592720}, as well as some implementations~\cite{Jackson2001}.
-However, as successful as they may be, these works do not address the
-dependency of scheduling metrics on the workload~\cite{variability}.
-These studies most often report \textit{post-hoc} performance since they
-compare algorithms after the workload is known.
+works explore how to tune EASY by reordering waiting and/or backfilling queues
+~\cite{Tsafrir_easypp_2005}, sometimes even in a randomized manner
+~\cite{1592720}; some implementations use this method as well
+~\cite{Jackson2001}. However, as successful as they may be, these works do not
+address the dependency of scheduling metrics on the workload
+~\cite{variability}. These studies most often report \textit{post-hoc}
+performance since they compare algorithms after the workload is known.
 
-The dynP scheduler~\cite{streit_selftuning_2002} suggests a systematic method
-to tuning these queues. Although it requires simulated scheduling runs at
-decision time and therefore, making it much more than the natural execution of
-EASY. The adaptation of EASY was studied under a different framework than ours
-in~\cite{talby2005improving}. Other works study the reservation
-mechanism~\cite{srinivasan2002selective}. Online portfolio approaches are also
-studied for the cloud setting~\cite{deng2013exploring}.
+The dynP scheduler ~\cite{streit_selftuning_2002} suggests a systematic method
+to tuning these queues. The algorithm requires simulated scheduling runs at
+decision time, therefore the time-to-decision of the scheduling is higher than
+that of EASY. The adaptation of EASY was studied under a different framework
+than ours in ~\cite{talby2005improving}. Other works study the reservation
+mechanism ~\cite{srinivasan2002selective}. Online portfolio approaches are also
+studied for the cloud setting ~\cite{deng2013exploring}.
 
 \subsection{Data-aware Resource Management.}
 
 There was a recent focus on leveraging the huge amount of data available in
 large scale computing platforms to improve system performance. Some
 works use collaborative filtering to co-locate tasks in clouds by estimating
-application interference~\cite{7516031}. Some others are closer to the
-application level. For instance, ~\cite{fmodeling} uses binary classification
+application interference ~\cite{7516031}. Some others are closer to the
+application level. For instance,  ~\cite{fmodeling} uses binary classification
 to distinguish benign memory faults from application errors so as to execute
 recovery algorithms.
 
 Several works use similar techniques in the context of HPC, in
-particular~\cite{Tsafrir_easypp_2005,learningruntimes}, hoping that better job
-runtime estimations should improve the scheduling~\cite{chiang_impact_2002}.
+particular ~\cite{Tsafrir_easypp_2005,learningruntimes}, hoping that better job
+runtime estimations should improve the scheduling ~\cite{chiang_impact_2002}.
 Some algorithms estimate runtime distributions model and choose jobs using
-probabilistic integration procedures~\cite{Nissimov2008}. However, these works
+probabilistic integration procedures ~\cite{Nissimov2008}. However, these works
 do not address the duality between the cumulative and maximal scheduling costs,
-as mentioned in~\cite{learningruntimes}. While these previous works intend to
+as mentioned in ~\cite{learningruntimes}. While these previous works intend to
 estimate uncertain parameters, we consider here a more pragmatic approach,
 that directly learns a good scheduling policy from a given policy space.
 
-Existing work~\cite{jsspp17} takes this approach offlines, by
+Existing work ~\cite{jsspp17} takes this approach offline, by
 splitting workload data in a training/testing fashion. This work studies
 EASY-Backfilling and shows that while the relative performance of some well-known
 priority orders for starting jobs differs between workloads, it is relatively
@@ -273,24 +273,24 @@ stable over time for a given workload.
 \subsection{Multi-Armed Bandits.}
 
 A multi-armed bandit (MAB) problem is a sequential allocation problem with
-partially observable rewards\cite{bubnow}. At every round, an action called an
-"arm" in the litterature must be chosen from a fixed set and the corresponding
+partially observable rewards ~\cite{bubnow}. At every round an action, called an
+"arm" in the literature, must be chosen from a fixed set and the corresponding
 reward is observed. The goal of a MAB algorithm is to maximize the total reward
 obtained in a successive number of rounds. This is essentially achieved using a
 combination of explorative actions, which help estimate the quality of each
 arm, and of exploitative actions, which leverage the current estimates by using
 a good arm. This problem can be addressed using various hypotheses. Most common
 are the (original) stochastic setting and the adversarial setting of regret
-minimization. See~\cite{thompson} for the original work on the stochastic
-setting and~\cite{Auer2002} for the ''Upper Confidence Bound`` family of
-algorithms. To the best of our knowledge, the work of~\cite{Banos} is the
-earliest for the adversarial setting; see~\cite{nonstoch} for the
-``Exponential-weight'' family of algorithms. We refer to~\cite{bubnow} for a
+minimization. See ~\cite{thompson} for the original work on the stochastic
+setting and ~\cite{Auer2002} for the ''Upper Confidence Bound`` family of
+algorithms. To the best of our knowledge, the work of ~\cite{Banos} is the
+earliest for the adversarial setting; see ~\cite{nonstoch} for the
+``Exponential-weight'' family of algorithms. We refer to ~\cite{bubnow} for a
 comprehensive review of the field. While these algorithms bound the cumulative
 difference in loss to the best arm (the regret), they have functional
 constraints such as the fact that the rewards should be contained in a range.
 The simple heuristic called \textit{Epsilon-Greedy} introduced
-in~\cite{Auer2002} does not have this requirement. For this reason, this
+in ~\cite{Auer2002} does not have this requirement. For this reason, this
 heuristic will be used in this paper and is described in
 Subsection~\ref{sub:bandit}.
 
@@ -316,7 +316,7 @@ the tasks of the job are assigned to the chosen nodes.
 
 In the classical case, the management software needs to execute a set of
 concurrent parallel jobs with rigid (known and fixed) resource requirements on
-a HPC platform represented by a pool of $m$ identical resources. This is an
+an HPC platform represented by a pool of $m$ identical resources. This is an
 on-line problem since the jobs are submitted over time and their
 characteristics are only known when they are released.  Below is the brief
 description of the characteristics of job
@@ -331,7 +331,7 @@ $j$:
    \item Actual running time $p_j$ (sometimes called \textit{processing time})
 
    \item Requested running time $\widetilde{p_j}$ (sometimes called
-     \textit{walltime}), which is an upper bound of $p_j$.
+     \textit{walltime}), which is in general an upper bound of $p_j$.
 
 \end{itemize}
 
@@ -348,7 +348,7 @@ the provided value.
 The selection of the job to run is performed according to a scheduling policy,
 which determines the order the jobs are executed. EASY-Backfilling is
 the most widely used policy due to its simple and robust implementation and
-known benefits such as high system utilization~\cite{easy}. This strategy has
+known benefits such as high system utilization ~\cite{easy}. This strategy has
 no worst case guarantee beyond the absence of starvation (i.e.\ every job will
 be scheduled at some moment).
 
@@ -366,16 +366,14 @@ does not delay the unique reservation.
 A system administrator may use one or multiple cost metric(s). Our study of
 scheduling performance relies on the waiting times of the jobs, which is one of
 the more commonly used objectives. The waiting time of a job is 
-
-     \begin{equation}
-       \textbf{Wait}_j =  start_j-r_j
-     \end{equation}
-
+ \begin{equation}
+   \textbf{Wait}_j =  start_j-r_j
+ \end{equation}
 where $start_j$ is the starting time of a job.
 Like other cost metrics, the waiting time is usually considered in its
 \textit{cumulative} version, which means that one seeks to minimize the average
 waiting time. It is worth noting that other metrics such as the maximum waiting
-time of all the jobs are also worthy of interest. Unfortunately, this criteria
+time of all the jobs are also worthy of interest. Unfortunately, this criterion
 is antagonistic in nature with the average waiting time. Section~\ref{sub:th}
 will outline our approach to address the bi-objective aspect of this problem.
 
@@ -391,16 +389,16 @@ make a robust framework for tuning EASY.
 
 The EASY heuristic uses a job queue to select and backfill jobs. While this job
 queue is ordered in FCFS order in the original heuristic, it is possible to
-reorder it at will. We focus on a search space of 10 reordering policies.
+reorder it at will. We focus on a search space of 12 reordering policies.
 
 \begin{enumerate}
-  \item FCFS: First-Come First-Serve, which is the most commonly used policy~\cite{easy}.
+  \item FCFS: First-Come First-Serve, which is the most commonly used policy ~\cite{easy}.
   \item LCFS: Last-Come First-Serve.
   \item SPF: Smallest estimated Processing time $\widetilde{p_{j}}$ First ~\cite{bfchar}.
   \item LPF: Longest estimated Processing time First.
   \item LQF: Largest resource requirement $q_j$ First.
   \item SQF: Smallest resource requirement First.
-  \item LEXP: Largest Expansion Factor First~\cite{bfchar}, where the expansion
+  \item LEXP: Largest Expansion Factor First ~\cite{bfchar}, where the expansion
     factor is defined as follows:
   \begin{equation} \frac{wait_j + \widetilde{p_j}}{\widetilde{p_j}} \end{equation}
     where $wait_j$ is the time job $j$ has been waiting until the time at which the decision is taken.
@@ -415,14 +413,14 @@ reorder it at will. We focus on a search space of 10 reordering policies.
 
 This search space is designed with the goal of being as semantically diverse as
 possible without making any judgement on which policy should perform well in
-practice. It does include most policies from related works in this area that we
+practice. It does include most policies from related works that we
 are aware of. In the following, we denote these policies by $P_i$ with $i = 1
 \ldots 12$.
 
 \subsection{Thresholding}
 \label{sub:th}
 
-Reordering the job queue means losing the no-starvation guarantee and some
+Reordering the job queue means losing the no-starvation guarantee; some
 individual jobs therefore can wait an undue amount of time. It is possible to
 introduce a thresholding mechanism to prevent this behavior: When a
 queued job's waiting time exceeds a fixed threshold $\Theta$, it is
@@ -490,11 +488,11 @@ during the whole period.
 We further assume that there is a certain regularity among periods, i.e.\ that
 the distribution of the job submission process does not radically differ
 between consecutive periods. This assumption is validated in the study
-presented in~\cite{jsspp17}. It further entails that the behavior of a policy
+presented in ~\cite{jsspp17}. It further entails that the behavior of a policy
 during the previous periods reflects its behavior on the current one, so that
 the selection of a policy can be based on its past behavior. However, there may
 be some variability between different periods for certain cost
-metrics~\cite{feitelson2001metrics}. This is illustrated in
+metrics ~\cite{feitelson2001metrics}. This is illustrated in
 Figure~\ref{fig:variability} which displays the average waiting time of various
 policies for the KTH-SP2 trace (see~\ref{sub:traces} for a description of the
 workloads) using weekly periods encompassing one year. As one can note, the
@@ -510,13 +508,13 @@ is easier than in the space of the original problem. It is important to note,
 however, that a pure reinforcement learning approach is difficult to develop in
 our context. Indeed, while we have outlined a reduced action space, the state
 space to consider is infinite. This is not prohibitive \textit{per se}, as
-modern methods~\cite{aprl} can bypass dimensionality issues via function
-approximation. However, these methods rely on large amounts of data, and we are
-studying online methods\footnote{The reinforcement learning literature uses the
-term ``\textit{on-policy}'' for these methods.}. We rely here on simpler, yet we
-believe more effective, strategies to solve this problem.  These strategies are
-applied online and rely on exact simulation, noisy simulation and
-$\epsilon$-greedy bandit exploration.
+modern methods ~\cite{aprl} can bypass dimensionality issues via function
+approximation. However, these methods rely on large amounts of batch data, and
+we are facing an online problem with no pre-existing data\footnote{The
+reinforcement learning literature uses the term ``\textit{on-policy}'' for this
+setting.}. We rely here on simpler, yet we believe more effective, strategies
+to solve this problem.  These strategies are applied online and rely on exact
+simulation, noisy simulation and $\epsilon$-greedy bandit exploration.
 
 \subsection{Policy Selection with Exact Simulation}
 \label{sub:feedback}
@@ -532,8 +530,8 @@ period $\Delta_t$ ($0 \le t $), and $P_i$ ($1 \le i \le 12$) one reordering
 policy (defined in Section~\ref{subsec:policies}). The cost of policy $P_i$
 during period $\Delta_t$ is defined as:
 %
-\begin{equation} \label{eq:cost-exact} w_{\mbox{exact}}(t;P_i) =
-\sum_{j=1}^{l(\Delta_t)} \mbox{Wait}_j^{P_i} \end{equation}
+\begin{equation} \label{eq:cost-exact} w(t;P_i) = \sum_{j=1}^{l(\Delta_t)}
+\mbox{Wait}_j^{P_i} \end{equation}
 %
 where $\mbox{Wait}_j^{P_i}$ denotes the estimate provided by the simulator of
 the waiting time for job $j$ according to policy $P_i$. The estimation of the
@@ -541,10 +539,19 @@ cost of a policy over all the periods preceding the current period can then be
 defined as:
 %
 \begin{equation} \label{eq:tot-cost-exact} w(\rightarrow T;P_i) =
-\sum_{t=0}^{T-1} \lambda^{T-1-t} w_{\mbox{exact}}(t;P_i) \end{equation}
+\sum_{t=0}^{T-1} \lambda^{T-1-t} w(t;P_i) \end{equation}
 %
 where $\lambda \in [0,1]$ is a decaying discount factor that can be used to
-privilege recent history (\textit{i.e.} recent periods). One then selects the
+privilege recent history (\textit{i.e.} recent periods). The above formulation
+is general and covers several possible situations : From stationary job
+distributions where $\lambda$ can be set to 1 to non-stationary distributions
+where the more recent history has to be privileged. As explained in Section
+6.1, in our experiments $\lambda$ is set to 1 as the distributions considered
+are stationary but the reader has to bear in mind that our framework can be use
+on different distributions by resorting to different values of lambda that can
+be set by cross-validation.
+
+One then selects the
 policy $P$ that minimizes the above cost for the period $\Delta_T$:
 %
 \begin{equation} \label{eq:select-exact} P = \mbox{argmin}_{P_i, 1 \le i \le
@@ -556,7 +563,7 @@ estimate of the waiting time of the policy over the preceding periods) so that
 the length of the period has little impact here. The only bias comes from the
 boundary states of the simulation. Indeed, we run simulations from an empty
 system and wait for the system to be empty when job submissions cease at the
-end of the submission period. Figure~\ref{fig:resimu}
+end of the period (see Figure~\ref{fig:resimu}).
 
 \begin{figure*}[]
   \centering
@@ -581,34 +588,39 @@ the cost as defined in Eqs \eqref{eq:cost-exact} and \eqref{eq:tot-cost-exact}
 would however be too optimistic and would represent an upper bound on what can
 be achieved by a selection strategy based on simulation. 
 
-In order to have a
-more realistic estimate of the behavior of a selection strategy based on
-simulation, we introduce noise in the simulator, as described below.
+In order to have a more realistic estimate of the behavior of a selection
+strategy based on simulation, we introduce noise in the simulator, as described
+below.
 
 \subsection{Policy Selection with Noisy Simulation}
 \label{sub:noisy}
 
-In order to simulate how the simulation strategy for selecting policies would
-work on non simulated traces, we randomly introduce noise in the estimate of
-the policy cost defined by Eq.~\eqref{eq:cost-exact} by rescaling it, either
-down or up:
+We take another step to evaluate how the simulation strategy for selecting
+policies would work in a batch scheduler. Simulation of real systems can be
+imprecise. While existing work reports values as low as 2\% imprecision we take
+a conservative approach and consider imprecision up to of 20\%. We randomly
+introduce multiplicative noise in the estimate of the policy cost defined by
+Eq.~\eqref{eq:cost-exact} by rescaling it, either down or up:
 %
-\begin{equation} \label{eq:cost-noisy} w_{\mbox{noisy}}(t;P_i) =
- \rho_t^i \sum_{j=1}^{l(\Delta_t)} \, \mbox{Wait}_j^{P_i} \end{equation}
+\begin{equation} \label{eq:cost-noisy} w_{\mbox{noisy}}(t;P_i) = \rho_t^i
+\sum_{j=1}^{l(\Delta_t)} \, \mbox{Wait}_j^{P_i} \end{equation}
 %
-where $\rho_t^i$ is uniformly sampled in the interval $[0.80,1.20]$, thus adding a
-+/- 20\% multiplicative noise on the waiting time estimated by the simulator.
-This value is taken as to be sufficiently larger than values previously reported,
-see e.g. ~\cite{dutot:hal-01333471} which reports 2 percent variations of the
-simulated metric compared to the metric on the real systems.
-The overall cost
-is then defined in the same way as before, leading to:
+where $\rho_t^i$ is uniformly sampled in the interval $[0.80,1.20]$, thus
+adding a +/- 20\% multiplicative noise on the waiting time estimated by the
+simulator.  This value is taken as to be sufficiently larger than values
+previously reported, see e.g. ~\cite{dutot:hal-01333471} which reports 2
+percent variations of the simulated metric compared to the metric on the real
+systems.  The overall cost is then defined in the same way as before, leading
+to:
 %
-\begin{equation} \label{eq:tot-cost-noisy} w(\rightarrow T;P_i) =
+\begin{equation} \label{eq:tot-cost-noisy} w_{\mbox{noisy}}(\rightarrow T;P_i) =
 \sum_{t=0}^{T-1} \lambda^{T-1-t} w_{\mbox{noisy}}(t;P_i) \end{equation}
 %
-As before (see Eq.~\ref{eq:select-exact}), the policy that minimizes the above
+As before the policy that minimizes the above
 cost is selected for the period $\Delta_T$.
+
+\begin{equation} \label{eq:select-noisy} P = \mbox{argmin}_{P_i, 1 \le i \le
+12} w_{\mbox{noisy}}(\rightarrow T;P_i) \end{equation}
 
 Instead of introducing noise in the output of the simulator when selecting the
 policy, one could have introduced it when collecting the execution traces. Our choice
@@ -634,7 +646,7 @@ Thus, we explore here a more efficient strategy that dispenses with estimating
 the cost of all policies at a given time and only updates the cost of the
 policy that is currently being used. This strategy makes use of the
 $\epsilon$-greedy exploration method, standard in reinforcement learning
-\cite{Watkins:1989} and bandit problems~\cite{Auer2002}, to trade-off
+~\cite{Watkins:1989} and bandit problems ~\cite{Auer2002}, to trade-off
 exploitation and exploration, and relies, as before, on past estimates of the
 cost to select the best policy in the exploitation mode.
 
@@ -662,7 +674,7 @@ submitted during $\Delta^{'}_t$ but finish later.
 
 The cost over all previous period of a policy $P_i$ is then defined as:
 %
-\begin{equation} \label{eq:tot-cost-greedy} w(\rightarrow T;P_i) =
+\begin{equation} \label{eq:tot-cost-greedy} w_{\mbox{epsilon}}(\rightarrow T;P_i) =
   \frac{1}{\sum_{t=0}^{T-1} \mathbbm{1}(P_i,t) l(\Delta^{'}_t)} \sum_{t=0}^{T-1}
 \mathbbm{1}(P_i,t) \lambda^{T-1-t} w_{\epsilon}(t;P_i) \end{equation}
 %
@@ -688,7 +700,7 @@ strategy:
 %
 \begin{equation}
 \label{eq:select-greedy}
-P = \mbox{argmin}_{P_i, 1 \le i \le 12} w(\rightarrow T;P_i)
+P = \mbox{argmin}_{P_i, 1 \le i \le 12} w_{\mbox{epsilon}}(\rightarrow T;P_i)
 \end{equation}
 %
 \item With probability $\epsilon$, select a policy $P_i, \, 1 \le i \le 12$, at random (exploration mode).
@@ -696,12 +708,12 @@ P = \mbox{argmin}_{P_i, 1 \le i \le 12} w(\rightarrow T;P_i)
 
 Figure~\ref{fig:bandit} illustrates this process. Several studies study the
 decay of $\epsilon$ over time, the exploration being less important once the
-estimates for the different policies are reliable \cite{Tokic:2010}. This
+estimates for the different policies are reliable ~\cite{Tokic:2010}. This
 strategy has however not been beneficial in our case. We believe this is due to
 the properties of the traces we use, as explained in
 Section~\ref{sec:experiments}. The $\epsilon$-greedy strategy is known to be
 outperformed in terms of regret by other classical algorithms such as the UCB
-or EXP family of algorithms. See~\cite{bubnow} for a precise definition and
+or EXP family of algorithms (see ~\cite{bubnow}). See ~\cite{bubnow} for a precise definition and
 thorough treatment of this subject. These algorithms however all rely on
 pre-normalized rewards. Here, the scale of $w_{\epsilon}(t;P_i)$ is not known
 in advance. While the usual doubling tricks can be devised to go around
@@ -768,10 +780,10 @@ The experimental validation performed in this work uses a mixture of small and
 large systems from different periods. These platforms are all targeted by this
 work, since they all are homogenous systems that run a batch scheduler.
 Table~\ref{tab:logs} presents the 7 logs, which can all be obtained from the
-Parallel Workload Archive~\cite{Feitelson20142967}. We use the
-``cleaned''\cite{pwa-clean} version of the logs as per the archive. We impose
+Parallel Workload Archive ~\cite{Feitelson20142967}. We use the
+``cleaned'' ~\cite{pwa-clean} version of the logs as per the archive. We impose
 an additional filtering step to the workloads\footnote{This filtering step is
-available in the reproducible workflow\cite{repro} as shell script
+available in the reproducible workflow ~\cite{repro} as shell script
 \lstinline[basicstyle=\ttfamily\color{blue}]|misc/strong\_filter|} in order to
 clean erroneous data:
 
@@ -796,7 +808,7 @@ raises a trade-off between precision and runtime. High precision can be
 obtained by carefully modeling the platform and its network topology, or
 extracting information from the jobs from their sources or post-mortem logs.
 This is the approach used by high-fidelity batch scheduling simulators such as
-BatSim~\cite{batsim}. In the present work, the focus is on studying the
+BatSim ~\cite{batsim}. In the present work, the focus is on studying the
 EASY-Backfilling mechanism in itself, without addressing the allocation
 problem. Moreover, the experimental protocol used here requires many
 simulation runs. Therefore, we set the precision/runtime trade-off at the
@@ -805,7 +817,7 @@ information relative to the platform and use the job processing times of the
 original workloads. In this setup, the processors are considered to be
 undistinguishable from each other, and jobs can be discontinuously mapped to
 any available processor on the system. During this work, we developed a
-lightweight simulator\cite{ocst} and now release it to the community along with
+lightweight simulator ~\cite{ocst} and now release it to the community along with
 this article. See the reproducibility paragraph below for more information.
 With this simulator, we are able to replay EASY-FCFS on the CEA-CURIE trace in
 33 seconds with a machine equipped with an Intel(R) Core(TM) i5-4310U CPU @
@@ -819,18 +831,18 @@ preparation and statistical analysis code.
 \label{ssub:resampling}
 
 Comparing algorithms in batch scheduling is made especially difficult by the
-fluctuations in commonly used metrics~\cite{feitelson1998metrics}. The variability in
+fluctuations in commonly used metrics ~\cite{feitelson1998metrics}. The variability in
 performance is known to outrank the available sample sizes: \textit{It is not
 enough to simply replay an algorithm using a workload trace}. Indeed, as
 presented in Figure~\ref{fig:variability}, the objective function we are using
 in this work is subject to high variability. In our experience, randomly
 shuffling months in a trace at random is enough to generate contradictory
 conclusions about which algorithm is better. This is a known
-problem~\cite{flurries} that motivated decades of research in workload
-modeling~\cite{feitbook}. Workload models have drawbacks in that they usually
+problem ~\cite{flurries} that motivated decades of research in workload
+modeling ~\cite{feitbook}. Workload models have drawbacks in that they usually
 lose the details of the workloads. This is problematic due to the non-linear
 aspect of the job scheduling process. This is discussed
-in~\cite{feitresampling}, an approach which attempts to solve this problem by
+in ~\cite{feitresampling}, an approach that attempts to solve this problem by
 resampling data directly from the original traces. In this work, we use a
 simple implementation of these ideas. More precisely, we want to sample the job
 submission process, which is achieved in the following manner: (a) For every
@@ -839,12 +851,13 @@ trace; (b) For each of these users, we choose a week of the original trace
 uniformly at random; (c) The jobs from this user in this original week are
 chosen to be present in the week being resampled. This simple mechanism enables
 us to preserve the dependency within a week. Although the system state may not
-be independent from one week to an other, we rely on existing
-work~\cite{jsspp17} and assume for these experiments that the system is in a
+be independent from one week to an other, as illustrated in~\cite{jsspp17},
+it is reasonable
+to assume that the system is in a stationary state.~\cite{jsspp17} and assume for these experiments that the system is in a
 stationary state. We do provide guidelines as how to incorporate tracking
 into our algorithms in Section~\ref{sec:online} by introducing a decaying
-discount factor $\lambda$. Our experiments use stationary resampled data, 
-and therefore no decay is necessary: $\lambda$ will be equal to $1$.
+discount factor $\lambda$. In our experiments, we use stationary resampled data, 
+and therefore no decay is necessary: $\lambda$ here is set to $1$.
 
 %Thus,
 %computing an average over the sampled traces at a given time can be related to
@@ -892,7 +905,7 @@ EASY($P,\Theta=40h$) using the following strategies:
     $[0.1,0.3,0.5,0.7,0.9]$. In this process, one trace among the 7
     from Table~\ref{tab:logs} is taken out, and the most frequent best
     hyperparameter value is used. Table~\ref{tab:hyperparam} outlines the
-    result of this cross-validation. Assuming workload traces are I.I.D, This
+    result of this cross-validation. Assuming workload traces are i.i.d, this
     ensures that the reported results are fair with respect to the situation
     where the reader of the study would implement the strategy directly.
 
@@ -934,14 +947,14 @@ lightweight simulator in the context of this research.
 
 \subsection{Replicability}
 
-We publish a declarative workflow~\cite{repro} based on our
-simulator~\cite{ocst} that runs experiments and generates all the figures from
+We publish a declarative workflow ~\cite{repro} based on our
+simulator ~\cite{ocst} that runs experiments and generates all the figures from
 this paper.
 
 There are various approaches for ensuring computational experiments are replicable,
 among which distributing complete operating system images, containers, or
 packaging software. As our experiments are CPU bound, we decide to opt for the
-software packaging approach~\cite{nix}. This allows to replicate the experiments on
+software packaging approach ~\cite{nix}. This allows to replicate the experiments on
 clusters where virtualization is not available or kernels are too old for
 containers and decreases simulation runtime.
 
@@ -956,7 +969,7 @@ The archive containing the experimental workflow can be obtained at:
 https://github.com/freuk/obps
 \end{lstlisting}
 
-All the code associated with this work is released under the ISC~\cite{isc}
+All the code associated with this work is released under the ISC ~\cite{isc}
 license.
 Running the experiments can be done
 on any platform equipped with the Nix package manager by running at the root of
@@ -973,9 +986,9 @@ this reason, the experimental workflow was designed to be executed on
 a single host.
 
 All data from this paper were obtained from the Swf Parallel Workloads
-Archive~\cite{Feitelson20142967}. 
+Archive ~\cite{Feitelson20142967}. 
 
- All experiments are tied together using zymake~\cite{zymake}, a minimalistic
+ All experiments are tied together using zymake ~\cite{zymake}, a minimalistic
  workflow system designed for computational experiments\footnote{The zymake system
  is also packaged by our nix expressions.}. This system is
  analogous to a traditional build system with added workflow capabilities. The
@@ -985,19 +998,19 @@ Archive~\cite{Feitelson20142967}.
  following steps:
 
  \begin{itemize}
-   \item Data. Data extraction from archives, filtering, resampling.
+   \item Data extraction from archives, data filtering, and data resampling.
      This is principally using shell scripts for data manipulation (see file
      \lstinline[basicstyle=\ttfamily\color{blue}]|misc/strong_filter| for the
      filtering steps used) and ocaml code that implements the resampling method
      described in~\ref{ssub:resampling}.
 
    \item Simulation. This step runs the lightweight ocaml backfilling
-     simulator specially written for this work. this simulator is made
-     available under the ISC~\cite{isc} license as a persistent zenodo
-     archive at~\cite{ocst}.
+     simulator specially written for this work. This simulator is made
+     available under the ISC ~\cite{isc} license as a persistent zenodo
+     archive at ~\cite{ocst}.
 
-   \item Analysis. This step runs R code that generates the figures
-     presented in this paper.
+   \item Analysis of the results. This step runs R code that generates the
+     figures presented in this paper.
  \end{itemize}
 
 All resulting figures will be situated in the simlinked folder named
@@ -1047,7 +1060,7 @@ waiting time obtained by a simulation run for a strategy $P$:
   \bar{w}(T_k,P) = \sum_{j=1}^{l(T_k)} \text{Wait}_j^{P}
 \end{equation}
 
-So that the values appearing in Table~\ref{tab:full} are exactly:
+The values appearing in Table~\ref{tab:full} are exactly:
 
 \begin{equation} \label{eq:cum}
   \frac{\sum_{k=1}^{k=60}\bar{w}(T_k,\text{EASY}(P_i,40h))-
