--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -182,7 +182,7 @@
 }
 
 @article{mualem_utilization_2001,
-  title = {Utilization, predictability, workloads, and user runtime estimates in scheduling the {{IBM SP2}} with backfilling},
+  title = "Utilization, predictability, workloads, and user runtime estimates in scheduling the {IBM SP2} with backfilling",
   volume = {12},
   issn = {1045-9219},
   doi = {10.1109/71.932708},
@@ -217,15 +217,18 @@
 }
 
 
-@article{Tsafrir_easypp_2005,
-  title = {Backfilling using runtime predictions rather than user estimates},
-  volume = {5},
-  timestamp = {2015-04-27T12:24:17Z},
-  urldate = {2014-08-21},
-  journal = {School of Computer Science and Engineering, Hebrew University of Jerusalem, Tech. Rep. TR},
-  author = {Tsafrir, Dan and Etsion, Yoav and Feitelson, Dror G.},
-  year = {2005}
-}
+@ARTICLE{Tsafrir_easypp_2005, 
+author={D. Tsafrir and Y. Etsion and D. G. Feitelson}, 
+journal={IEEE Transactions on Parallel and Distributed Systems}, 
+title={Backfilling Using System-Generated Predictions Rather than User Runtime Estimates}, 
+year={2007}, 
+volume={18}, 
+number={6}, 
+pages={789-803}, 
+keywords={parallel machines;processor scheduling;EASY scheduler;backfilling algorithm;first come first serve order;parallel job scheduling algorithm;supercomputers;system-generated prediction;user runtime estimates;Accuracy;Delay effects;Dynamic scheduling;History;Job production systems;Measurement;Processor scheduling;Runtime;Scheduling algorithm;Supercomputers;EASY;EASY++;Parallel job scheduling;SJBF.;backfilling;dynamic prediction correction;history-based predictions;performance metrics;runtime estimates;system-generated predictions}, 
+doi={10.1109/TPDS.2007.70606}, 
+ISSN={1045-9219}, 
+month={June},}
 
 
 @inproceedings{georgiou_FSE_2015,
@@ -349,7 +352,7 @@
 
 @InProceedings{easy,
   author    = {Skovira, Joseph and Chan, Waiman and Zhou, Honbo and Lifka, David A.},
-  title     = {The EASY - LoadLeveler {API} Project},
+  title     = "The {EASY} - LoadLeveler {API} Project",
   booktitle = {Proceedings of the Workshop on Job Scheduling Strategies for Parallel Processing},
   year      = {1996},
   series    = {IPPS '96},
@@ -412,7 +415,7 @@
 @INPROCEEDINGS{7516031,
   author={Y. Ukidave and X. Li and D. Kaeli},
   booktitle={2016 IEEE International Parallel and Distributed Processing Symposium (IPDPS)},
-  title={Mystic: Predictive Scheduling for GPU Based Cloud Servers Using Machine Learning},
+  title="Mystic: Predictive Scheduling for {GPU} Based Cloud Servers Using Machine Learning",
   year={2016},
   pages={353-362},
   doi={10.1109/IPDPS.2016.73},
@@ -491,26 +494,6 @@
   author={Leung, Joseph YT},
   year={2004},
   publisher={CRC Press}
-}
-
-@article{Mu'alem:2001:UPW:380314.380315,
-  author = {Mu'alem, Ahuva W. and Feitelson, Dror G.},
-  title = {Utilization, Predictability, Workloads, and User Runtime Estimates in Scheduling the IBM SP2 with Backfilling},
-  journal = {IEEE Trans. Parallel Distrib. Syst.},
-  issue_date = {June 2001},
-  volume = {12},
-  number = {6},
-  month = jun,
-  year = {2001},
-  issn = {1045-9219},
-  pages = {529--543},
-  numpages = {15},
-  url = {http://dx.doi.org/10.1109/71.932708},
-  doi = {10.1109/71.932708},
-  acmid = {380315},
-  publisher = {IEEE Press},
-  address = {Piscataway, NJ, USA},
-  keywords = {Parallel job scheduling, backfilling, runtime estimates, workload modeling, performance metrics.},
 }
 
 @Misc{top500,
@@ -773,7 +756,7 @@ http://www.cs.huji.ac.il/labs/parallel/workload/\ logs.html#clean
 }
 
 @inproceedings{jsspp17,
-  TITLE = {{Tuning EASY-Backfilling Queues}},
+  TITLE = "Tuning {EASY}-Backfilling Queues",
   AUTHOR = {Jerome Lelong and Valentin Reis and Denis Trystram},
   URL = {https://hal.archives-ouvertes.fr/hal-01522459},
   BOOKTITLE = {{21st Workshop on Job Scheduling Strategies for Parallel Processing}},
